...
                  //     isValidated = _formKey.currentState!.validate();
                  //   });
                  // },
                  child: Column(
                    children: [
                      TextFormField(
                        key: Key("email_formfield"),
                        keyboardType: TextInputType.emailAddress,
                        onSaved: (value) {
                          this._userInfo['email'] = value;
                        },
                        onChanged: (value) {
                          setState(() {
...
                        ),
                      ),
                      SizedBox(
                        height: 18.0,
                      ),
                      TextFormField(
                        key: Key('password_formfield'),
                        obscureText: _isObscured,
                        onSaved: (value) {
                          this._userInfo['password'] = value;
                        },
                        onChanged: (value) {
                          setState(() {
...
                        height: 18.0,
                      ),
                      SizedBox(
                        width: size.width,
                        height: size.height * 0.08,
                        child: TextButton(
                          key: Key('signinbutton_key'),
                          style: TextButton.styleFrom(
                            backgroundColor: isValidated
                                ? Theme.of(context).accentColor
                                : Theme.of(context)
                                    .secondaryHeaderColor
                                    .withAlpha(180),
...
                //   ),
                // ),
                SizedBox(
                  height: 20.0,
                ),
                TextButton(
                  key: Key("signup_button_text"),
                  onPressed: () {
                    widget.url != null
                        ? Navigator.of(context).pushReplacement(
                            MaterialPageRoute(
                              builder: (context) => SignupPage(
                                url: widget.url,
...
