...
                      height: 20.0,
                    ),
                    SizedBox(
                      height: 45.0,
                      width: size.width,
                      child: TextButton(
                        key: Key("welcome_page_signin_button"),
                        style: TextButton.styleFrom(
                            shape: RoundedRectangleBorder(
                                borderRadius: BorderRadius.circular(5.0),
                                side: BorderSide(
                                    color: Theme.of(context).accentColor))),
                        onPressed: () {
...
