...
                          );
                  }),
              label: LocaleKeys.notifications_label_text.tr()),
          BottomNavigationBarItem(
            icon: Icon(
              Icons.description,
              key: Key("home_page_manage_button"),
            ),
            label: LocaleKeys.manage_label_text.tr(),
          ),
          BottomNavigationBarItem(
            icon: Icon(
              Icons.account_circle_outlined,
...
