...
          appBar: AppBar(
            title: Text(LocaleKeys.register_appbar_title_text.tr()),
          ),
          body: Container(
            padding: EdgeInsets.symmetric(horizontal: 20.0),
            child: ListView(
              key: Key("signup_page_listview"),
              // crossAxisAlignment: CrossAxisAlignment.stretch,
              children: [
                Padding(
                  padding: const EdgeInsets.symmetric(vertical: 15.0),
                  child: Image(
                    image: AssetImage(
...
                      isValidated = _formKey.currentState!.validate();
                    });
                  },
                  child: Column(
                    children: [
                      TextFormField(
                        key: Key("signup_firstname"),
                        onSaved: (value) {
                          setState(() {
                            _userInfo['firstName'] = value;
                          });
                        },
                        validator: (value) {
...
                        ),
                      ),
                      SizedBox(
                        height: 18.0,
                      ),
                      TextFormField(
                        key: Key('signup_lastname'),
                        onSaved: (value) {
                          setState(() {
                            _userInfo['lastName'] = value;
                          });
                        },
                        validator: (value) {
...
                        ),
                      ),
                      SizedBox(
                        height: 18.0,
                      ),
                      TextFormField(
                        key: Key('signup_email'),
                        keyboardType: TextInputType.emailAddress,
                        onSaved: (value) {
                          _userInfo['email'] = value;
                        },
                        validator: (value) {
                          if (value!.isEmpty) {
...
                        ),
                      ),
                      SizedBox(
                        height: 18.0,
                      ),
                      TextFormField(
                        key: Key('signup_phonenumber'),
                        maxLength: 10,
                        keyboardType: TextInputType.phone,
                        onSaved: (value) {
                          _userInfo['phoneNumber'] = value;
                        },
                        validator: (value) {
...
                        ),
                      ),
                      SizedBox(
                        height: 18.0,
                      ),
                      TextFormField(
                        key: Key('signup_password'),
                        obscureText: _isObscured,
                        onSaved: (value) {
                          setState(() {
                            _userInfo['password'] = value;
                          });
                        },
...
                            },
                          ),
                          labelText: LocaleKeys.Password_text.tr(),
                        ),
                      ),
                      TextFormField(
                        key: Key('signup_confirmpassword'),
                        obscureText: _isObscured,
                        onSaved: (value) {
                          setState(() {
                            _userInfo['password'] = value;
                          });
                        },
...
                        height: 18.0,
                      ),
                      SizedBox(
                        width: size.width,
                        height: size.height * 0.08,
                        child: TextButton(
                          key: Key("signup_button"),
                          style: TextButton.styleFrom(
                            backgroundColor: isValidated
                                ? Theme.of(context).accentColor
                                : Theme.of(context)
                                    .secondaryHeaderColor
                                    .withOpacity(0.2),
...
